--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,9 @@ crash.*.log
 # Terraform CLI config (can contain credentials)
 .terraformrc
 terraform.rc
+
+# Local override files
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
