--- a/phase-3/manifests/deployment.yaml
+++ b/phase-3/manifests/deployment.yaml
@@ -24,6 +24,11 @@ spec:
         image: docker.n8n.io/n8nio/n8n
         ports:
         - containerPort: 5678
+          protocol: TCP
+
+        envFrom:
+          - configMapRef:
+              name: n8n-configmap
 
         securityContext:
           allowPrivilegeEscalation: false
@@ -31,6 +36,8 @@ spec:
         volumeMounts:
           - mountPath: "/home/node/.n8n"
             name: n8n-data
+
+      restartPolicy: Always
 
       volumes:
         - name: n8n-data
