--- a/phase-3/manifests/configmap.yaml
+++ b/phase-3/manifests/configmap.yaml
@@ -8,10 +8,10 @@ data:
   N8N_SECURE_COOKIE: "false"
 
   # Postgres variables
-  DB_POSTGRESDB_TYPE: "postgresdb"
+  DB_TYPE: "postgresdb"
   DB_POSTGRESDB_HOST: "fredlc-psql-n8n-mercury.postgres.database.azure.com"
   DB_POSTGRESDB_PORT: "5432"
   DB_POSTGRESDB_DATABASE: "n8n"
   DB_POSTGRESDB_USER: "n8nadmin"
   GENERIC_TIMEZONE: "America/Toronto"
-  WEBHOOK_URL: "http://52.237.53.46:5678/"
+  # WEBHOOK_URL: "http://52.237.53.46:5678/"
