--- a/phase-5-gitops/mercury-gitops/apps/base/customer1/ingress.yaml
+++ b/phase-5-gitops/mercury-gitops/apps/base/customer1/ingress.yaml
@@ -8,10 +8,10 @@ spec:
   ingressClassName: traefik-traefik
   tls:
     - hosts:
-        - customer1.mercury.mischavandenburg.net
+        - customer1.mercury.fredericlefebvrecote.com
       secretName: customer1-tls
   rules:
-    - host: customer1.mercury.mischavandenburg.net
+    - host: customer1.mercury.fredericlefebvrecote.com
       http:
         paths:
           - path: /
