Added database backup configuration and plugin

--- a/apps/base/customer1/secrets.yaml
+++ b/apps/base/customer1/secrets.yaml
@@ -18,6 +18,12 @@ spec:
         - |
           objectName: customer1-db-password
           objectType: secret
+        - |
+          objectName: storage-account-name
+          objectType: secret
+        - |
+          objectName: customer1-blob-sas
+          objectType: secret
   secretObjects:
     - secretName: customer1-db-credentials
       type: kubernetes.io/basic-auth
@@ -33,3 +39,10 @@ spec:
           key: DB_POSTGRESDB_USER
         - objectName: customer1-db-password
           key: DB_POSTGRESDB_PASSWORD
+    - secretName: customer1-backup-creds
+      type: Opaque
+      data:
+        - objectName: storage-account-name
+          key: storage-account-name
+        - objectName: customer1-blob-sas
+          key: customer1-blob-sas
